# tokenwise

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
src/tokenwise/: analyzer.py  cli.py  dashboard.py  parser.py  pricing.py  security.py  storage.py
tests/: test_analyzer.py  test_cli.py  test_dashboard.py  test_parser.py  test_pricing.py  test_security.py  test_storage.py
